<resources>
    <string name="app_name">GitHub client</string>
    <string name="counter_title_1">Counter 1</string>
    <string name="counter_value_1">0</string>
    <string name="counter_title_2">Counter 2</string>
    <string name="counter_value_2">0</string>
    <string name="counter_title_3">Counter 3</string>
    <string name="counter_value_3">0</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="user_login_title">Login</string>
    <string name="repositories_list_title">Repositories:</string>
    <string name="repository_name_title">Name</string>
    <string name="repository_description_title">Description</string>
    <string name="repository_forks_count_title">Forks count</string>
</resources>